kubernetes/old/operators/longhorn-system/longhorn/operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  labels:
    app: longhorn
  annotations:
    hajimari.io/appName: "Longhorn"
    hajimari.io/icon: mdi:harddisk
    #gethomepage.dev/enabled: "true"
    #gethomepage.dev/name: "Longhorn"
    #gethomepage.dev/icon: longhorn
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host longhorn.zynthovian.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
      - *host
